populated testimonal slider w/ content and resolved font not showing f/e

--- a/public/output.css
+++ b/public/output.css
@@ -411,7 +411,7 @@ video {
 }
 
 html {
-  font-family: 'Be Vietnam Pro', sans-serif;
+  font-family: 'Be Vietnam Pro', sans-serif !important;
 }
 
 h1 {
@@ -419,7 +419,11 @@ h1 {
 }
 
 h2 {
-  font-weight: 500;
+  font-weight: 700;
+}
+
+h5 {
+  font-weight: 700;
 }
 
 p {
@@ -626,12 +630,20 @@ p {
   margin-top: 6rem;
 }
 
+.-mt-14 {
+  margin-top: -3.5rem;
+}
+
 .flex {
   display: flex;
 }
 
 .hidden {
   display: none;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .max-w-md {
@@ -694,8 +706,18 @@ p {
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-y-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
+}
+
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .bg-brightRed {
@@ -706,6 +728,11 @@ p {
 .bg-brightRedSuperLight {
   --tw-bg-opacity: 1;
   background-color: rgb(253 236 231 / var(--tw-bg-opacity));
+}
+
+.bg-veryLightGray {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
 }
 
 .p-6 {
@@ -859,6 +886,10 @@ p {
 
   .md\:w-1\/2 {
     width: 50%;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:flex-row {
